--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-<div id="main" style="width: 1600px;height:600px;"></div>
+<div id="main" style="width: 2400px;height:1300px;"></div>
 
 <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>-->
 <!--<script src="https://d3js.org/d3.v5.min.js"></script>-->
@@ -36,23 +36,12 @@
     var now = +new Date(1997, 9, 3);
     var oneDay = 24 * 3600 * 1000;
     var value = Math.random() * 1000;
-    var x1=[];
 
-      $.ajax({
-            type:"get",
-            url:"monitor/cpuaverage",
-            data:{"ip":"192.168.20.139"},
-            dataType:"json",
-            async:true,
-            success:function(result) {
-                console.log(result);
-                for(var i=0;i<60;i++){
-                    var split = result[i].split("*");
-                    x1.push(split[0]);
-                    data.push(split[1]);
-                }
-            }
-        });
+    var x1 = [];
+    for(var i=0;i<60;i++){
+        x1.push(i);
+        data.push(0);
+    }
 
 
     option = {
@@ -74,7 +63,7 @@
             type: 'category',
             data: x1,
             splitLine: {
-                show: true
+                show: false
             }
         },
         yAxis: {
@@ -97,26 +86,22 @@
     setInterval(function () {
         $.ajax({
             type:"get",
-            url:"monitor/cpuaverage",
-            data:{"ip":"192.168.20.139"},
+            url:"monitor/cpu",
+            data:{"ip":"192.168.106.101"},
             dataType:"json",
             async:true,
             success:function(result) {
                 for(var i=0;i<60;i++){
-                    var split = result[i].split("*");
                     option.xAxis.data.shift();
-                    option.xAxis.data.push(split[0]);
+                    option.xAxis.data.push(result.gatherTime);
                     option.series[0].data.shift();
-                    option.series[0].data.push(split[1]);
+                    option.series[0].data.push(result.load);
                 }
-                myChart.setOption(option);
+                myChart.setOption(option,true,false);
             }
         });
 
-    }, 500);
-
-
-
+    }, 1000);
 
 </script>
 </body>
